refactor: use options-instance in CsvWriter
rename ICsvPipeWriter to ICsvBufferWriter

--- a/FlameCsv.Core/Writing/CsvWriter.Generated.cs.tt
+++ b/FlameCsv.Core/Writing/CsvWriter.Generated.cs.tt
@@ -5,6 +5,7 @@ using System.IO.Pipelines;
 using System.Runtime.CompilerServices;
 using System.Text;
 using FlameCsv.Binding;
+using FlameCsv.IO;
 using FlameCsv.Writing;
 
 namespace FlameCsv;
@@ -17,7 +18,7 @@ static partial class CsvWriter
     const string docOptions = "<param name=\"options\">Options to use, <see cref=\"CsvOptions{T}.Default\"/> used by default</param>";
     const string docToken = "<param name=\"cancellationToken\">Token to cancel the writing operation</param>";
     const string docReturns = "<returns>Task representing the asynchronous writing operation</returns>";
-    const string docBuffersize = "<param name=\"bufferSize\">Buffer size to use for writing</param>";
+    const string docIOOpts = "<param name=\"ioOptions\">Options to configure the buffer size and other IO related options</param>";
     const string docEncoding = "<param name=\"encoding\">Encoding to pass to the inner <see cref=\"StreamWriter\"/></param>";
     const string docRemarks =
         """
@@ -78,7 +79,7 @@ static partial class CsvWriter
         IDematerializer<char, TValue> dematerializer = <#= bindValue #>;
 
         builder ??= new();
-        using var writer = CsvFieldWriter.Create(new StringWriter(builder), options, bufferSize: -1, leaveOpen: false);
+        using var writer = CsvFieldWriter.Create(new StringWriter(builder), options);
         WriteCore(values, writer, dematerializer);
         return builder;
     }
@@ -89,11 +90,13 @@ static partial class CsvWriter
     /// <#= docPath #>
     /// <#= docValues #><#= typeMapDocs #>
     /// <#= docOptions #>
+    /// <#= docIOOpts #>
     /// <#= docRemarks #>
     <#= attrs #>public static void WriteToFile<<#= typeAttrs #>TValue>(
         string path,
         IEnumerable<TValue> values,<#= typeMapByte #>
-        CsvOptions<byte>? options = null)
+        CsvOptions<byte>? options = null,
+        CsvIOOptions ioOptions = default)
     {
         ArgumentException.ThrowIfNullOrWhiteSpace(path);
         ArgumentNullException.ThrowIfNull(values);
@@ -101,7 +104,8 @@ static partial class CsvWriter
         options ??= CsvOptions<byte>.Default;
         IDematerializer<byte, TValue> dematerializer = <#= bindValue #>;
 
-        using FileStream stream = GetFileStream(path, isAsync: false);
+        // ensure the file stream is always disposed
+        using FileStream stream = GetFileStream(path, isAsync: false, in ioOptions);
 
         using var writer = CsvFieldWriter.Create(stream, options);
         WriteCore(values, writer, dematerializer);
@@ -114,7 +118,7 @@ static partial class CsvWriter
     /// <#= docValues #><#= typeMapDocs #>
     /// <#= docOptions #>
     /// <#= docEncoding #>
-    /// <#= docBuffersize #>
+    /// <#= docIOOpts #>
     /// <#= docRemarks #>
     [OverloadResolutionPriority(-1)] // prefer byte to char when writing to file
     <#= attrs #>public static void WriteToFile<<#= typeAttrs #>TValue>(
@@ -122,7 +126,7 @@ static partial class CsvWriter
         IEnumerable<TValue> values,<#= typeMapChar #>
         CsvOptions<char>? options = null,
         Encoding? encoding = null,
-        int bufferSize = -1)
+        CsvIOOptions ioOptions = default)
     {
         ArgumentException.ThrowIfNullOrWhiteSpace(path);
         ArgumentNullException.ThrowIfNull(values);
@@ -130,10 +134,9 @@ static partial class CsvWriter
         options ??= CsvOptions<char>.Default;
         IDematerializer<char, TValue> dematerializer = <#= bindValue #>;
 
-        if (bufferSize == -1) bufferSize = DefaultFileStreamBufferSize;
-
-        using FileStream stream = GetFileStream(path, isAsync: false, bufferSize);
-        using var writer = CsvFieldWriter.Create(new StreamWriter(stream, encoding, bufferSize, false), options, bufferSize, leaveOpen: false);
+        // ensure the file stream is always disposed
+        using StreamWriter streamWriter = GetFileStreamWriter(path, encoding, isAsync: false, in ioOptions);
+        using var writer = CsvFieldWriter.Create(streamWriter, options, in ioOptions);
 
         WriteCore(values, writer, dematerializer);
     }
@@ -144,15 +147,13 @@ static partial class CsvWriter
     /// <param name="textWriter">Writer to write the CSV to</param>
     /// <#= docValues #><#= typeMapDocs #>
     /// <#= docOptions #>
-    /// <#= docBuffersize #>
-    /// <param name="leaveOpen">Whether to leave the writer open after writing</param>
+    /// <#= docIOOpts #>
     /// <#= docRemarks #>
     <#= attrs #>public static void Write<<#= typeAttrs #>TValue>(
         TextWriter textWriter,
         IEnumerable<TValue> values,<#= typeMapChar #>
         CsvOptions<char>? options = null,
-        int bufferSize = -1,
-        bool leaveOpen = false)
+        CsvIOOptions ioOptions = default)
     {
         ArgumentNullException.ThrowIfNull(textWriter);
         ArgumentNullException.ThrowIfNull(values);
@@ -160,7 +161,7 @@ static partial class CsvWriter
         options ??= CsvOptions<char>.Default;
         IDematerializer<char, TValue> dematerializer = <#= bindValue #>;
 
-        using var writer = CsvFieldWriter.Create(textWriter, options, bufferSize, leaveOpen);
+        using var writer = CsvFieldWriter.Create(textWriter, options, in ioOptions);
         WriteCore(values, writer, dematerializer);
     }
 
@@ -170,15 +171,13 @@ static partial class CsvWriter
     /// <param name="stream">Stream to write the CSV to</param>
     /// <#= docValues #><#= typeMapDocs #>
     /// <#= docOptions #>
-    /// <param name="bufferSize">Buffer size to use for writing</param>
-    /// <param name="leaveOpen">Whether to leave the stream open after writing</param>
+    /// <#= docIOOpts #>
     /// <#= docRemarks #>
     <#= attrs #>public static void Write<<#= typeAttrs #>TValue>(
         Stream stream,
         IEnumerable<TValue> values,<#= typeMapByte #>
         CsvOptions<byte>? options = null,
-        int bufferSize = -1,
-        bool leaveOpen = false)
+        CsvIOOptions ioOptions = default)
     {
         FlameCsv.Extensions.Guard.CanWrite(stream);
         ArgumentNullException.ThrowIfNull(values);
@@ -186,7 +185,7 @@ static partial class CsvWriter
         options ??= CsvOptions<byte>.Default;
         IDematerializer<byte, TValue> dematerializer = <#= bindValue #>;
 
-        using var writer = CsvFieldWriter.Create(stream, options, bufferSize, leaveOpen);
+        using var writer = CsvFieldWriter.Create(stream, options, in ioOptions);
         WriteCore(values, writer, dematerializer);
     }
 
@@ -200,8 +199,7 @@ static partial class CsvWriter
     /// <param name="textWriter">Writer to write the CSV to</param>
     /// <#= docValues #><#= typeMapDocs #>
     /// <#= docOptions #>
-    /// <param name="bufferSize">Buffer size to use for writing</param>
-    /// <param name="leaveOpen">Whether to leave the writer open after writing</param>
+    /// <#= docIOOpts #>
     /// <#= docToken #>
     /// <#= docReturns #>
     /// <#= docRemarks #>
@@ -209,8 +207,7 @@ static partial class CsvWriter
         TextWriter textWriter,
         <#= enumerableType #> values,<#= typeMapChar #>
         CsvOptions<char>? options = null,
-        int bufferSize = -1,
-        bool leaveOpen = false,
+        CsvIOOptions ioOptions = default,
         CancellationToken cancellationToken = default)
     {
         ArgumentNullException.ThrowIfNull(textWriter);
@@ -223,7 +220,7 @@ static partial class CsvWriter
             options ??= CsvOptions<char>.Default;
             IDematerializer<char, TValue> dematerializer = <#= bindValue #>;
 
-            using var writer = CsvFieldWriter.Create(textWriter, options, bufferSize, leaveOpen);
+            using var writer = CsvFieldWriter.Create(textWriter, options, in ioOptions);
 
             await WriteAsyncCore(
                 values,
@@ -240,8 +237,7 @@ static partial class CsvWriter
     /// <param name="stream">Stream to write the CSV to</param>
     /// <#= docValues #><#= typeMapDocs #>
     /// <#= docOptions #>
-    /// <param name="bufferSize">Buffer size to use for writing</param>
-    /// <param name="leaveOpen">Whether to leave the stream open after writing</param>
+    /// <#= docIOOpts #>
     /// <#= docToken #>
     /// <#= docReturns #>
     /// <#= docRemarks #>
@@ -249,32 +245,23 @@ static partial class CsvWriter
         Stream stream,
         <#= enumerableType #> values,<#= typeMapByte #>
         CsvOptions<byte>? options = null,
-        int bufferSize = -1,
-        bool leaveOpen = false,
+        CsvIOOptions ioOptions = default,
         CancellationToken cancellationToken = default)
     {
         FlameCsv.Extensions.Guard.CanWrite(stream);
         ArgumentNullException.ThrowIfNull(values);
 
-        try
-        {
-            cancellationToken.ThrowIfCancellationRequested();
-            options ??= CsvOptions<byte>.Default;
-            IDematerializer<byte, TValue> dematerializer = <#= bindValue #>;
+        options ??= CsvOptions<byte>.Default;
+        IDematerializer<byte, TValue> dematerializer = <#= bindValue #>;
 
-            using var writer = CsvFieldWriter.Create(stream, options, bufferSize, leaveOpen);
+        using var writer = CsvFieldWriter.Create(stream, options, in ioOptions);
 
-            await WriteAsyncCore(
-                values,
-                writer,
-                dematerializer,
-                cancellationToken)
-                .ConfigureAwait(false);
-        }
-        finally
-        {
-            if (!leaveOpen) await stream.DisposeAsync().ConfigureAwait(false);
-        }
+        await WriteAsyncCore(
+            values,
+            writer,
+            dematerializer,
+            cancellationToken)
+            .ConfigureAwait(false);
     }
 
     /// <summary>
@@ -295,13 +282,6 @@ static partial class CsvWriter
         ArgumentNullException.ThrowIfNull(pipe);
         ArgumentNullException.ThrowIfNull(values);
 
-        if (cancellationToken.IsCancellationRequested)
-        {
-            OperationCanceledException exception = new(cancellationToken);
-            await pipe.CompleteAsync(exception).ConfigureAwait(false);
-            throw exception;
-        }
-
         options ??= CsvOptions<byte>.Default;
         IDematerializer<byte, TValue> dematerializer = <#= bindValue #>;
 
@@ -321,6 +301,7 @@ static partial class CsvWriter
     /// <#= docPath #>
     /// <#= docValues #><#= typeMapDocs #>
     /// <#= docOptions #>
+    /// <#= docIOOpts #>
     /// <#= docToken #>
     /// <#= docReturns #>
     /// <#= docRemarks #>
@@ -328,6 +309,7 @@ static partial class CsvWriter
         string path,
         <#= enumerableType #> values,<#= typeMapByte #>
         CsvOptions<byte>? options = null,
+        CsvIOOptions ioOptions = default,
         CancellationToken cancellationToken = default)
     {
         ArgumentException.ThrowIfNullOrWhiteSpace(path);
@@ -338,10 +320,12 @@ static partial class CsvWriter
         options ??= CsvOptions<byte>.Default;
         IDematerializer<byte, TValue> dematerializer = <#= bindValue #>;
 
-        FileStream stream = GetFileStream(path, isAsync: true);
+        FileStream stream = GetFileStream(path, isAsync: true, in ioOptions);
+
+        // ensure the file stream is always disposed
         await using (stream.ConfigureAwait(false))
         {
-            using var writer = CsvFieldWriter.Create(stream, options);
+            using var writer = CsvFieldWriter.Create(stream, options, in ioOptions);
 
             await WriteAsyncCore(
                 values,
@@ -359,7 +343,7 @@ static partial class CsvWriter
     /// <#= docValues #><#= typeMapDocs #>
     /// <#= docOptions #>
     /// <#= docEncoding #>
-    /// <#= docBuffersize #>
+    /// <#= docIOOpts #>
     /// <#= docToken #>
     /// <#= docReturns #>
     /// <#= docRemarks #>
@@ -369,7 +353,7 @@ static partial class CsvWriter
         <#= enumerableType #> values,<#= typeMapChar #>
         CsvOptions<char>? options = null,
         Encoding? encoding = null,
-        int bufferSize = -1,
+        CsvIOOptions ioOptions = default,
         CancellationToken cancellationToken = default)
     {
         ArgumentException.ThrowIfNullOrWhiteSpace(path);
@@ -380,12 +364,12 @@ static partial class CsvWriter
         options ??= CsvOptions<char>.Default;
         IDematerializer<char, TValue> dematerializer = <#= bindValue #>;
 
-        if (bufferSize == -1) bufferSize = DefaultFileStreamBufferSize;
+        StreamWriter stream = GetFileStreamWriter(path, encoding, isAsync: true, in ioOptions);
 
-        FileStream stream = GetFileStream(path, isAsync: true, bufferSize);
+        // ensure the file stream is always disposed
         await using (stream.ConfigureAwait(false))
         {
-            using var writer = CsvFieldWriter.Create(new StreamWriter(stream, encoding, bufferSize, false), options, bufferSize, leaveOpen: false);
+            using var writer = CsvFieldWriter.Create(stream, options, in ioOptions);
 
             await WriteAsyncCore(
                 values,
@@ -395,7 +379,6 @@ static partial class CsvWriter
                 .ConfigureAwait(false);
         }
     }
-
 <#
         }
     }
