feat: async dispose destinations if write throws on arguments

--- a/FlameCsv.Core/Writing/CsvWriter.Generated.cs.tt
+++ b/FlameCsv.Core/Writing/CsvWriter.Generated.cs.tt
@@ -7,6 +7,7 @@ using System.Text;
 using FlameCsv.Binding;
 using FlameCsv.IO;
 using FlameCsv.Writing;
+using FlameCsv.Extensions;
 
 namespace FlameCsv;
 
@@ -179,7 +180,7 @@ static partial class CsvWriter
         CsvOptions<byte>? options = null,
         CsvIOOptions ioOptions = default)
     {
-        FlameCsv.Extensions.Guard.CanWrite(stream);
+        Guard.CanWrite(stream);
         ArgumentNullException.ThrowIfNull(values);
 
         options ??= CsvOptions<byte>.Default;
@@ -220,7 +221,7 @@ static partial class CsvWriter
             options ??= CsvOptions<char>.Default;
             IDematerializer<char, TValue> dematerializer = <#= bindValue #>;
 
-            using var writer = CsvFieldWriter.Create(textWriter, options, in ioOptions);
+            using var writer = await CsvFieldWriter.CreateAsync(textWriter, options, ioOptions).ConfigureAwait(false);
 
             await WriteAsyncCore(
                 values,
@@ -248,13 +249,13 @@ static partial class CsvWriter
         CsvIOOptions ioOptions = default,
         CancellationToken cancellationToken = default)
     {
-        FlameCsv.Extensions.Guard.CanWrite(stream);
+        Guard.CanWrite(stream);
         ArgumentNullException.ThrowIfNull(values);
 
         options ??= CsvOptions<byte>.Default;
         IDematerializer<byte, TValue> dematerializer = <#= bindValue #>;
 
-        using var writer = CsvFieldWriter.Create(stream, options, in ioOptions);
+        using var writer = await CsvFieldWriter.CreateAsync(stream, options, ioOptions).ConfigureAwait(false);
 
         await WriteAsyncCore(
             values,
@@ -285,7 +286,7 @@ static partial class CsvWriter
         options ??= CsvOptions<byte>.Default;
         IDematerializer<byte, TValue> dematerializer = <#= bindValue #>;
 
-        using var writer = CsvFieldWriter.Create(pipe, options);
+        using var writer = await CsvFieldWriter.CreateAsync(pipe, options).ConfigureAwait(false);
 
         await WriteAsyncCore(
             values,
@@ -325,7 +326,7 @@ static partial class CsvWriter
         // ensure the file stream is always disposed
         await using (stream.ConfigureAwait(false))
         {
-            using var writer = CsvFieldWriter.Create(stream, options, in ioOptions);
+            using var writer = await CsvFieldWriter.CreateAsync(stream, options, ioOptions).ConfigureAwait(false);
 
             await WriteAsyncCore(
                 values,
@@ -369,7 +370,7 @@ static partial class CsvWriter
         // ensure the file stream is always disposed
         await using (stream.ConfigureAwait(false))
         {
-            using var writer = CsvFieldWriter.Create(stream, options, in ioOptions);
+            using var writer = await CsvFieldWriter.CreateAsync(stream, options, ioOptions).ConfigureAwait(false);
 
             await WriteAsyncCore(
                 values,
