feat: use bespoke utf8 reader/writer when possible

--- a/FlameCsv.Core/Writing/CsvWriter.Generated.tt
+++ b/FlameCsv.Core/Writing/CsvWriter.Generated.tt
@@ -105,7 +105,7 @@ static partial class CsvWriter
         options ??= CsvOptions<byte>.Default;
         IDematerializer<byte, TValue> dematerializer = <#= bindValue #>;
 
-        // ensure the file stream is always disposed
+        ioOptions = ioOptions.ForFileIO();
         using FileStream stream = GetFileStream(path, isAsync: false, in ioOptions);
 
         using var writer = CsvFieldWriter.Create(stream, options);
@@ -135,9 +135,9 @@ static partial class CsvWriter
         options ??= CsvOptions<char>.Default;
         IDematerializer<char, TValue> dematerializer = <#= bindValue #>;
 
-        // ensure the file stream is always disposed
-        using StreamWriter streamWriter = GetFileStreamWriter(path, encoding, isAsync: false, in ioOptions);
-        using var writer = CsvFieldWriter.Create(streamWriter, options, in ioOptions);
+        ioOptions = ioOptions.ForFileIO();
+        ICsvBufferWriter<char> fileWriter = GetFileBufferWriter(path, encoding, isAsync: false, options.Allocator, ioOptions);
+        using var writer = CsvFieldWriter.Create(fileWriter, options);
 
         WriteCore(values, writer, dematerializer);
     }
@@ -321,9 +321,9 @@ static partial class CsvWriter
         options ??= CsvOptions<byte>.Default;
         IDematerializer<byte, TValue> dematerializer = <#= bindValue #>;
 
+        ioOptions = ioOptions.ForFileIO();
         FileStream stream = GetFileStream(path, isAsync: true, in ioOptions);
 
-        // ensure the file stream is always disposed
         await using (stream.ConfigureAwait(false))
         {
             using var writer = await CsvFieldWriter.CreateAsync(stream, options, ioOptions).ConfigureAwait(false);
@@ -365,20 +365,17 @@ static partial class CsvWriter
         options ??= CsvOptions<char>.Default;
         IDematerializer<char, TValue> dematerializer = <#= bindValue #>;
 
-        StreamWriter stream = GetFileStreamWriter(path, encoding, isAsync: true, in ioOptions);
+        ioOptions = ioOptions.ForFileIO();
+        ICsvBufferWriter<char> fileWriter = GetFileBufferWriter(path, encoding, isAsync: true, options.Allocator, ioOptions);
 
-        // ensure the file stream is always disposed
-        await using (stream.ConfigureAwait(false))
-        {
-            using var writer = await CsvFieldWriter.CreateAsync(stream, options, ioOptions).ConfigureAwait(false);
+        using var writer = await CsvFieldWriter.CreateAsync(fileWriter, options).ConfigureAwait(false);
 
-            await WriteAsyncCore(
-                values,
-                writer,
-                dematerializer,
-                cancellationToken)
-                .ConfigureAwait(false);
-        }
+        await WriteAsyncCore(
+            values,
+            writer,
+            dematerializer,
+            cancellationToken)
+            .ConfigureAwait(false);
     }
 <#
         }
