test: improve test coverage

--- a/src/Core/Intrinsics/ISimdVector.Generated.tt
+++ b/src/Core/Intrinsics/ISimdVector.Generated.tt
@@ -329,6 +329,7 @@ internal readonly struct <#= typeName #> : ISimdVector<<#= keyword #>, <#= typeN
 #>
 
 /// <summary>Vector type that is not supported and does nothing.</summary>
+[System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverage]
 internal readonly struct NoOpVector<T> : ISimdVector<T, NoOpVector<T>> where T : unmanaged, IBinaryInteger<T>
 {
     public static bool IsSupported => false;
